<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:orientation="vertical"
    android:background="@color/Orange">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">
        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/material_dynamic_neutral80"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_margin="10dp"
            android:textSize="30dp"
            />

        <TextView
            android:id="@+id/TextViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number"
            android:layout_margin="10dp"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/TextViewMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mail"
            android:layout_margin="10dp"
            android:textSize="30dp"/>
    </LinearLayout>

</LinearLayout>